@@ -1,0 +1,18 @@
+#	cpt file created by: makecpt -Cjet -T-100/100/10
+#COLOR_MODEL = RGB
+#
+-500	0	0	127	-100	0	0	127
+-100	0	0	178	-50	0	0	178
+-50	0	25	255	-25	0	25	255
+-25	0	128	255	-10	0	128	255
+-10	0	178	255	-5	0	178	255
+-5 	0	229	255	0 	0	229	255
+0	255	255	191	5 	255	255	191
+5 	255	255	140	10 	255	255	140
+10 	255	229	0	25 	255	229	0
+25	255	127	0	50	255	127	0
+50	255	76	0	100	255	76	0
+100	178	0	0	500	178	0	0
+B	0	0	0
+F	255	255	255
+N	128	128	128
