@@ -57,6 +57,7 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                               'data/velo.cpt',
                               'data/gthf.cpt',
                               'data/litho_temp.cpt',
+                              'data/rsl_res.cpt',
                               'data/eismint2.data']),
               ('bin',['progs/add_projinfo.py',
                       'progs/create_topo.py',
@@ -74,6 +75,7 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                       'progs/plotRSLloc.py',
                       'progs/plotRSLhist.py',
                       'progs/plotRSLdata.py',
+                      'progs/plotRSLres.py',
 		      'progs/extractCFstats.py',
                       'progs/ran_topo.py',
 		      'progs/extractTS.py',
